--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
       content="yes">
     <meta name="application-name"
       content="NerdsNote">
+    <link rel="shortcut icon"
+      href="images/icon/icon-32.png">
     <link rel="icon"
       sizes="192x192"
       href="images/icon/icon-192-chrome-touch.png">
